--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     </section>
 
     <section class="join-us py-5"
-        style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/chess_3.jpg'); background-size: cover; background-position: center; height: 622px; width: 80vw; margin: auto; border-radius: 2%; border-top: 1px solid #ccc; position: relative;">
+        style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/chess_3.jpg'); background-size: cover; background-position: center; position: relative;">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8 text-center">
