--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="images/psych.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                Psych-64
+                <img src="images/psych.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top"><p id="psych">Psych-64</p>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +41,7 @@
                         <a class="nav-link" href="#upcoming-events">Events</a>
                     </li>
                 </ul>
-                <button class="btn btn-outline-dark">Donate</button>
+                <button id="donate-btn" class="btn btn-outline-dark">Donate</button>
                 <button class="btn btn-outline-dark theme-switch">Theme</button>
             </div>
         </div>
@@ -375,7 +374,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="footer-left">
-                        <h2 class="website-name">Psych-64</h2>
+                        
                         <img src="images/psych.png" alt="Logo" class="footer-logo">
                     </div>
                 </div>
