--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="images/psych.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top"><p id="psych">Psych-64</p>
+                <img src="images/psych.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                <p id="psych">Psych-64</p>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -374,8 +375,10 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="footer-left">
-                        
-                        <img src="images/psych.png" alt="Logo" class="footer-logo">
+                        <div id="footer-logo">
+                            <img src="images/psych-logo1.png" alt="Logo" class="footer-logo">
+                            <h2>Psych-64</h2>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -409,5 +412,5 @@
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/4596956b22.js" crossorigin="anonymous"></script>
 </body>
-</html>
 
+</html>
